FIX: fjerner ubrukt kode i uttak modulen